--- a/app/hoster/styles.css
+++ b/app/hoster/styles.css
@@ -1,46 +1,54 @@
 .my-node {
-    @apply p-4 rounded shadow-md backdrop-blur-[2px] border;
+  @apply p-4 rounded shadow-md backdrop-blur-[2px] border;
 }
 .my-node-selected {
-    @apply border-gray-500;
+  @apply border-gray-500;
 }
 
 .style-node {
-    @apply px-4 py-6 rounded shadow-md backdrop-blur-[2px] border inline-flex flex-col;
+  @apply px-4 py-6 rounded shadow-md backdrop-blur-[2px] border inline-flex flex-col;
 }
 .style-node-selected {
-    @apply border-gray-500;
+  @apply border-gray-500;
 }
 
-.my-label{
-    @apply absolute left-0 -top-6 text-base
+.my-label {
+  @apply absolute left-0 -top-6 text-base;
 }
 
-.my-menu{
-  @apply bg-gray-300 hover:bg-gray-400 text-gray-800 font-bold py-2 px-4 rounded block w-full
+.my-menu {
+  @apply bg-gray-300 hover:bg-gray-400 text-gray-800 font-bold py-2 px-4 rounded block w-full;
 }
 
 @keyframes border-glow {
-    0% {
-      box-shadow: 0 0 15px 5px rgba(255, 105, 180, 0.6), 0 0 30px 10px rgba(255, 105, 180, 0.3);
-    }
-    50% {
-      box-shadow: 0 0 30px 10px rgba(255, 105, 180, 0.9), 0 0 60px 20px rgba(255, 105, 180, 0.5);
-    }
-    100% {
-      box-shadow: 0 0 15px 5px rgba(255, 105, 180, 0.6), 0 0 30px 10px rgba(255, 105, 180, 0.3);
-    }
+  0% {
+    box-shadow:
+      0 0 15px 5px rgba(255, 105, 180, 0.6),
+      0 0 30px 10px rgba(255, 105, 180, 0.3);
   }
+  50% {
+    box-shadow:
+      0 0 30px 10px rgba(255, 105, 180, 0.9),
+      0 0 60px 20px rgba(255, 105, 180, 0.5);
+  }
+  100% {
+    box-shadow:
+      0 0 15px 5px rgba(255, 105, 180, 0.6),
+      0 0 30px 10px rgba(255, 105, 180, 0.3);
+  }
+}
 
 @keyframes border-rotate {
-0% {
+  0% {
     border-radius: 0;
-}
-100% {
+  }
+  100% {
     border-radius: 50%;
-}
+  }
 }
 
 .glow-border {
-animation: border-glow 2s infinite alternate, border-rotate 4s infinite linear;
+  animation:
+    border-glow 2s infinite alternate,
+    border-rotate 4s infinite linear;
 }
